# github-copilot-upgrading

workshop/: README_ko.md
workshop/upgraded/: .gitignore  README.rst  pyproject.toml  setup.py
